# providerServer

./: .env  .env.example  .gitignore  Readme.md  buildCommand.txt  database.py  downloadImage.sh  downloadTunnelClient.sh  install_mega.sh  install_script.sh  postinst.sh  pyproject.toml  requirements.txt  server.py  start-tunnel.sh  virt.py  vncSetupScript.sh
kafka/: scraper_to_kafka.py
lib/systemd/system/: mega-scrapper.service  mega.service
mngt_server_controllers/: auth.py  conf.py  env.py  heartbeats.py  system_info.py
prometheus/: metrics.py
scripts/: install_script.sh  vm_creationg.py
tmp/: metricsFacker.py  wg_123.conf  wg_e02ca87b-f081-4d1f-a7e9-83684c3e5690.conf
virt_controllers/: networkcrud.py  telemetry.py  vmcrud.py  vmssh.py
